# taco

./: .gitignore  CMakeLists.txt  README.md
include/taco/: core.hpp  dialog.hpp  dimensions.hpp  input.hpp  taco.hpp
src/: core.cpp  dialog.cpp  dimensions.cpp  main.cpp
tests/: .gitignore
tests/dialog/: CMakeLists.txt
tests/dialog/src/: main.cpp
tests/player/src/: main.cpp
